2006-04-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/hash/TestOfWhirlpool.java:
	Updated documentation.
	(TV1): Use Version 3 test vector.
	(TV2): Use Version 3 test vector.
	(test): Use ISO test vectors.

2006-04-06  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/security.java: Add check for no
	permissions when calling getClassLoader() on bootstrap class.

2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* README: Added line about compiling the Harness, RunnerProcess, and
	tests.

2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* Harness.java: New file.
	* README: New file (old one moved to README.OldHarness).
	* README.OldHarness: New file, copied from the old README.
	* RunnerProcess.java: New file.
	* harness: New file.

2006-04-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/net/URLConnection/getFileNameMap.java: New file.

2006-04-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/InvocationTargetException/Chain.java:
	New file.

2006-04-05  Bryce McKinlay  <mckinlay@redhat.com>

	* gnu/testlet/java/util/Iterator/ConcurrentModification.java: New test.

2006-04-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGImageWriteParam.java:
	New test.

2006-04-03  Tom Tromey  <tromey@redhat.com>

	PR classpath/26971:
	* gnu/testlet/javax/naming/directory/BasicAttribute/Enumerate.java:
	New file.

2006-04-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGHuffmanTable.java:
	Reformat.  Optimize imports.
	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGImageReadParam.java:
	New test.
	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGQTable.java:
	Optimize imports.

2006-03-31  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Component/keyPressTest.java: 
	New test.

2006-03-30  Thomas Fitzsimmons  <fitzsim@redhat.com>
